--- a/app/framework/visao/menu.phtml
+++ b/app/framework/visao/menu.phtml
@@ -110,6 +110,18 @@
 
                 </li>
 
+                <li class="<?php echo ($visao_controlador == 'bibliotecas')? 'menu-active' : ''; ?>">
+
+                    <a href="<?php echo CAMINHO; ?>/bibliotecas">Bibliotecas</a>
+
+                </li>
+
+                <li class="<?php echo ($visao_controlador == 'ajudantes')? 'menu-active' : ''; ?>">
+
+                    <a href="<?php echo CAMINHO; ?>/ajudantes">Ajudantes</a>
+
+                </li>
+
             </ul>
 
         </nav>
