Atualização do Framework

--- a/app/framework/visao/cabecalho.phtml
+++ b/app/framework/visao/cabecalho.phtml
@@ -10,7 +10,7 @@
 
             <div class="actions">
 
-                <a href="#<?php echo $visao_controlador; ?>" class="btn-get-started">Começar</a>
+                <a href="#<?php echo $view_controlador; ?>" class="btn-get-started">Começar</a>
 
             </div>
 
