--- a/app/framework/visao/menu.phtml
+++ b/app/framework/visao/menu.phtml
@@ -6,29 +6,29 @@
 
             <ul class="nav-menu">
 
-                <li class="<?php echo ($visao_controlador == 'index')? 'menu-active' : ''; ?>">
+                <li class="<?php echo ($view_controlador == 'index')? 'menu-active' : ''; ?>">
 
                     <a href="<?php echo CAMINHO; ?>">Sobre</a>
 
                 </li>
 
-                <li class="<?php echo ($visao_controlador == 'primeirospassos')? 'menu-active' : ''; ?>">
+                <li class="<?php echo ($view_controlador == 'primeirospassos')? 'menu-active' : ''; ?>">
 
                     <a href="<?php echo CAMINHO; ?>/primeirospassos">Primeiros passos</a>
 
                 </li>
 
-                <li class="menu-has-children <?php echo ($visao_controlador == 'entendacontrolador' || $visao_controlador == 'criarcontrolador')? 'menu-active' : ''; ?>"><a href="">Controlador</a>
+                <li class="menu-has-children <?php echo ($view_controlador == 'entendacontrolador' || $view_controlador == 'criarcontrolador')? 'menu-active' : ''; ?>"><a href="">Controlador</a>
 
                     <ul>
 
-                        <li class="<?php echo ($visao_controlador == 'entendacontrolador')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'entendacontrolador')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/entendacontrolador">Entenda Controlador</a>
 
                         </li>
 
-                        <li class="<?php echo ($visao_controlador == 'criarcontrolador')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'criarcontrolador')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/criarcontrolador">Criar Controlador</a>
 
@@ -38,17 +38,17 @@
 
                 </li>
 
-                <li class="menu-has-children <?php echo ($visao_controlador == 'entendamodelo' || $visao_controlador == 'criarmodelo')? 'menu-active' : ''; ?>"><a href="">Modelo</a>
+                <li class="menu-has-children <?php echo ($view_controlador == 'entendamodelo' || $view_controlador == 'criarmodelo')? 'menu-active' : ''; ?>"><a href="">Modelo</a>
 
                     <ul>
 
-                        <li class="<?php echo ($visao_controlador == 'entendamodelo')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'entendamodelo')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/entendamodelo">Entenda Modelo</a>
 
                         </li>
 
-                        <li class="<?php echo ($visao_controlador == 'criarmodelo')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'criarmodelo')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/criarmodelo">Criar Modelo</a>
 
@@ -58,23 +58,23 @@
 
                 </li>
 
-                <li class="menu-has-children <?php echo ($visao_controlador == 'entendavisao' || $visao_controlador == 'criarvisao' || $visao_controlador == 'passardadosvisao')? 'menu-active' : ''; ?>"><a href="">Visão</a>
+                <li class="menu-has-children <?php echo ($view_controlador == 'entendavisao' || $view_controlador == 'criarvisao' || $view_controlador == 'passardadosvisao')? 'menu-active' : ''; ?>"><a href="">Visão</a>
 
                     <ul>
 
-                        <li class="<?php echo ($visao_controlador == 'entendavisao')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'entendavisao')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/entendavisao">Entenda Visão</a>
 
                         </li>
 
-                        <li class="<?php echo ($visao_controlador == 'criarvisao')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'criarvisao')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/criarvisao">Criar Visão</a>
 
                         </li>
 
-                        <li class="<?php echo ($visao_controlador == 'passardadosvisao')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'passardadosvisao')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/passardadosvisao">Passar dados para Visão</a>
 
@@ -84,17 +84,17 @@
 
                 </li>
 
-                <li class="menu-has-children <?php echo ($visao_controlador == 'bdconfiguracao' || $visao_controlador == 'bdcrud')? 'menu-active' : ''; ?>"><a href="">Banco de Dados</a>
+                <li class="menu-has-children <?php echo ($view_controlador == 'bdconfiguracao' || $view_controlador == 'bdcrud')? 'menu-active' : ''; ?>"><a href="">Banco de Dados</a>
 
                     <ul>
 
-                        <li class="<?php echo ($visao_controlador == 'bdconfiguracao')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'bdconfiguracao')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/bdconfiguracao">Configuração</a>
 
                         </li>
 
-                        <li class="<?php echo ($visao_controlador == 'bdcrud')? 'menu-active' : ''; ?>">
+                        <li class="<?php echo ($view_controlador == 'bdcrud')? 'menu-active' : ''; ?>">
 
                             <a href="<?php echo CAMINHO; ?>/bdcrud">CRUD e Outros</a>
 
@@ -110,13 +110,13 @@
 
                 </li>
 
-                <li class="<?php echo ($visao_controlador == 'bibliotecas')? 'menu-active' : ''; ?>">
+                <li class="<?php echo ($view_controlador == 'bibliotecas')? 'menu-active' : ''; ?>">
 
                     <a href="<?php echo CAMINHO; ?>/bibliotecas">Bibliotecas</a>
 
                 </li>
 
-                <li class="<?php echo ($visao_controlador == 'ajudantes')? 'menu-active' : ''; ?>">
+                <li class="<?php echo ($view_controlador == 'ajudantes')? 'menu-active' : ''; ?>">
 
                     <a href="<?php echo CAMINHO; ?>/ajudantes">Ajudantes</a>
 
