--- a/app/framework/visao/passardadosvisao/index.phtml
+++ b/app/framework/visao/passardadosvisao/index.phtml
@@ -61,7 +61,7 @@
 
                 <p class="primeirospassos-text">
 
-                    É possível passar os dados do controlador para a visão, utilizando o método <code>$this->load->visao('arquivo.php')</code>. <br><br>
+                    É possível passar os dados do controlador para a visão, utilizando o método <code>$this->load->view('arquivo.php')</code>. <br><br>
                     
                     Veja o exemplo abaixo:
 
@@ -78,7 +78,7 @@ class primeirocontroladorControlador extends Controller{
         $parametros[\'framework\']= \'Guepardo\';
         $parametros[\'ano\']= \'2017\';
 
-        $this->load->visao(\'index.php\', $parametros);
+        $this->load->view(\'index.php\', $parametros);
 
     }
 
@@ -89,14 +89,14 @@ class primeirocontroladorControlador extends Controller{
                     ?> <br><br>
 
                 Os dados são passados dentro do array de <code>parametros</code>, e o mesmo é passado como o segundo parametro no método <code>visao</code>. <br>
-                Para recuperar os dados na visão, basta passar o prefixo <code>$visao_</code> mais o indice do array. <br><br>
+                Para recuperar os dados na visão, basta passar o prefixo <code>$view_</code> mais o indice do array. <br><br>
 
                 <?php
 
                         highlight_string('<?php
 
-    $visao_framework;
-    $visao_ano;
+    $view_framework;
+    $view_ano;
 
 ?>');
 
@@ -118,8 +118,8 @@ class primeirocontroladorControlador extends Controller{
 
                     Para que isso esteja disponível basta deixar o <code>AUTOURLPAR_VISAO</code> como <code>true</code>, essa configuração está definido dentro de <code>config/config.php</code>. <br><br>
 
-                    Para chamar o parametro da url, basta passar <code>$visaoauto_</code>, por exemplo: <br>
-                    <code>localhost/minhaaplicacao/meucontrolador/minhaacao/nome/guepardo</code>, nesse exemplo quero recuperar o parametro nome, então simplismente coloco <code>$visaoauto_nome;</code> e o mesmo retornará <code>guepardo</code>.
+                    Para chamar o parametro da url, basta passar <code>$viewauto_</code>, por exemplo: <br>
+                    <code>localhost/minhaaplicacao/meucontrolador/minhaacao/nome/guepardo</code>, nesse exemplo quero recuperar o parametro nome, então simplismente coloco <code>$viewauto_nome;</code> e o mesmo retornará <code>guepardo</code>.
 
                 </p>
 
@@ -135,7 +135,7 @@ class primeirocontroladorControlador extends Controller{
 
                     Para definir o caminho é necessário passar como terceiro parametro da <code>visão</code>, exemplo: <br><br>
 
-                    <code>$this->load->visao('index.html','',APP_PATCH.'/visao/visao_2/');</code>
+                    <code>$this->load->view('index.html','',APP_PATCH.'/visao/visao_2/');</code>
 
                 </p>
 
