--- a/app/adminLTE/visao/index.phtml
+++ b/app/adminLTE/visao/index.phtml
@@ -88,7 +88,7 @@
 					<?php
 
 						// Carrega o conteudo central
-						require_once( APP_PATCH.'visao/'.$this->router->controlador.'/'.$this->router->acao.'.phtml' );
+						require_once( APP_PATCH.'view-compress/'.$this->router->controlador.'/'.$this->router->acao.'.phtml' );
 
 					?>
 
