--- a/app/framework/view-compress/criarcontrolador/index.phtml
+++ b/app/framework/view-compress/criarcontrolador/index.phtml
@@ -2,9 +2,19 @@
 
                         highlight_string('<?php
 
-class primeirocontroladorControlador extends Controller{
+class primeirocontroladorControlador extends Controller
+{
 
-    public function indexAcao(){
+    // Inicializa assim que entra no controlador
+    public function inicializacao()
+    {
+        
+        // Codigos
+
+    }
+
+    public function indexAcao()
+    {
 
         echo "FrameWork Guepardo";
 
