--- a/app/framework/view-compress/criarmodelo/index.phtml
+++ b/app/framework/view-compress/criarmodelo/index.phtml
@@ -2,9 +2,11 @@
 
                         highlight_string('<?php
 
-class primeiromodeloModelo extends GU_Model{
+class primeiromodeloModelo extends GU_Model
+{
 
-    public function guepardo(){
+    public function guepardo()
+    {
 
         return echo "Guepardo - Modelo";
 
@@ -16,9 +18,11 @@ class primeiromodeloModelo extends GU_Model{
 
                         highlight_string('<?php
 
-class primeirocontroladorControlador extends Controller{
+class primeirocontroladorControlador extends Controller
+{
 
-    public function indexAcao(){
+    public function indexAcao()
+    {
 
         // Carrega e instancia o modelo
         $this->load->modelo( \'primeiromodelo\' );
