--- a/app/framework/view-compress/passardadosvisao/index.phtml
+++ b/app/framework/view-compress/passardadosvisao/index.phtml
@@ -2,9 +2,11 @@
 
                         highlight_string('<?php
 
-class primeirocontroladorControlador extends Controller{
+class primeirocontroladorControlador extends Controller
+{
 
-    public function indexAcao(){
+    public function indexAcao()
+    {
 
         $parametros[\'framework\']= \'Guepardo\';
         $parametros[\'ano\']= \'2017\';
