--- a/app/framework/visao/index.phtml
+++ b/app/framework/visao/index.phtml
@@ -42,7 +42,7 @@
 
 			require_once('menu.phtml');
 
-			require_once( APP_PATCH . 'visao/' . $this->router->controlador . '/' . $this->router->acao . '.phtml' );
+			require_once( APP_PATCH . 'view-compress/' . $this->router->controlador . '/' . $this->router->acao . '.phtml' );
 
 			require_once('footer.phtml');
 
