--- a/app/framework/view-compress/ajudantes/index.phtml
+++ b/app/framework/view-compress/ajudantes/index.phtml
@@ -1,11 +1,19 @@
-<section id="ajudantes"><div class="container wow fadeInUp"><div class="row"><div class="col-md-12"><h3 class="section-title">Ajudantes</h3><div class="section-title-divider"></div><p class="section-description">Ajudante é um grupo de funções aonde você poderá chamar no decorrer de seu projeto, assim que precisar, diminuindo assim a duplicidade de código no projeto.</p></div></div></div><div class="container wow fadeInUp"><div class="row"><div class="col-md-3"><div class="menu-lateral"><button type="button" class="btn btn-gu" ng-class="{'active': aju.carregando}" ng-click="altera( 'carregando', 'aju' )">Carregando ajudante</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.automatico}" ng-click="altera( 'automatico', 'aju' )">Carregamento automático</button></div></div><div class="col-md-9 ajudantes-content conteudo-lateral" ng-if="aju.carregando"><h2 class="ajudantes-title">Carregamento de Ajudantes</h2><p class="primeirospassos-text">O carregamento dos ajudantes são bem simples, dentro do seu modelo e/ou controlador, basta estar utilizando: <code>$this->load->ajudantes( array() );</code> e no mesmo você estará passando os nomes dos ajudantes ao qual irá utilizar. Por exemplo:<br>Tenho um ajudante chamado: <code>texto.php</code>, basta então chamar: <code>$this->load->ajudantes( array("texto") );</code><br><br>Para a criação de um ajudante chamado <code>texto.php</code> que será carregada dentro do modelo e/ou controlador, é preciso estar criando da seguinde maneira!<br><br> <?php
+<section id="ajudantes"><div class="container wow fadeInUp"><div class="row"><div class="col-md-12"><h3 class="section-title">Ajudantes</h3><div class="section-title-divider"></div><p class="section-description">Ajudante é um grupo de funções aonde você poderá chamar no decorrer de seu projeto, assim que precisar, diminuindo assim a duplicidade de código no projeto.</p></div></div></div><div class="container wow fadeInUp"><div class="row"><div class="col-md-3"><div class="menu-lateral"><button type="button" class="btn btn-gu" ng-class="{'active': aju.carregando}" ng-click="altera( 'carregando', 'aju' )">Carregando ajudante</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.automatico}" ng-click="altera( 'automatico', 'aju' )">Carregamento automático</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.checasessao}" ng-click="altera( 'checasessao', 'aju' )">Ajudante Checa Sessão</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.cookies}" ng-click="altera( 'cookies', 'aju' )">Ajudante Cookies</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.data}" ng-click="altera( 'data', 'aju' )">Ajudante Data</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.pasta}" ng-click="altera( 'pasta', 'aju' )">Ajudante Pasta</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.sessao}" ng-click="altera( 'sessao', 'aju' )">Ajudante Sessão</button> <button type="button" class="btn btn-gu mar-top10" ng-class="{'active': aju.texto}" ng-click="altera( 'texto', 'aju' )">Ajudante Texto</button></div></div> <?php
 
-                        highlight_string('<?php
+                require_once('carregaAjudante.php');
 
-    function retiraAcento($texto){
+                require_once('automaticaAjudante.php');
 
-        // Algoritmo
+                require_once('checasessaoAjudante.php');
 
-    }
+                require_once('cookiesAjudante.php');
 
-?>'); ?><br><br>Para estar utilizando as funções, basta chamar o nome da função direto: <code>retiraAcento("olá mundo");</code></p></div><div class="col-md-9 ajudantes-content conteudo-lateral" ng-if="aju.automatico"><h2 class="ajudantes-title">Carregamento Automático de Ajudantes</h2><p class="primeirospassos-text">O carregamento automático parte do arquivo <code>autocarregamento.php</code> que se encontra em <code>suaaplicacao/app/aplicacao/config/autocarregamento.php</code>, nele você encontrará <code>$autocarregar['ajudante'] = array();</code> e <code>$autocarregar['biblioteca'] = array();</code>, para realizar o autocarregamento do ajudante, basta passar o nome dele no array, por exemplo: <code>$autocarregar['ajudante'] = array("texto");</code>, ai todo o basta chama a função normalmente onde desejar do seu projeto.</p></div></div></div></section>
+                require_once('dataAjudante.php');
+
+                require_once('pastaAjudante.php');
+
+                require_once('sessaoAjudante.php');
+
+                require_once('textoAjudante.php');
+
+            ?> </div></div></section>
